<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Giambi</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="action_logout">Log Out</string>
    <string name="action_report">Report</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_search">Search</string>
    <string name="action_create_new_item">New..</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">Login</string>
    <string name="emailAddress">Email Address</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="register">Register</string>
    <string name="registerPageIcon">Register page icon</string>
    <string name="account">Account</string>
    <string name="account_name">Account Name</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_number">Account Number</string>
    <string name="current_balance">Current Balance</string>
    <string name="tax_rate">Tax Rate</string>
    <string name="add">Add</string>
    <string name="dialog_OK">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_message_username_empty">Invalid username. Username can not be empty.</string>
    <string name="dialog_message_username_length">Invalid username. Username needs to be longer than 6 spaces.</string>
    <string name="dialog_message_username_not_email">Invalid username. Username needs to be a valid email.</string>
    <string name="dialog_message_password_empty">Invalid password. Password can not be empty.</string>
    <string name="dialog_message_password_length">Invalid password. Password needs to be longer than 8 spaces.</string>
    <string name="dialog_message_password_easy">Invalid password. Password can not be all numbers.</string>
    <string name="dialog_message_password_not_match">Please confirm your passwords. Both have to match</string>
    <string name="dialog_message_invalid_account_number">Invalid account number. Account number must be all numbers.</string>
    <string name="dialog_message_invalid_balance">Invalid balance number. Balance must be numbers.</string>
    <string name="transaction_name">Transaction Name</string>
    <string name="transaction_amount">Amount</string>
    <string name="transaction_category">Category</string>
    <string name="merchant">Merchant</string>
    <string name="transaction">transaction</string>
    <string name="report">Spending report</string>
    <string name="date">Date</string>
    <string name="date_hint">DD/MM/YYYY</string>
    <string name="pick_one">Pick one...</string>
    <string name="end_date">Choose End Date:</string>
    <string name="start_date">Choose Start Date:</string>
    <string name="select">Select</string>
    <string-array name="drawer_titles">
        <item >Account</item>
        <item>Create New Account</item>
        <item>Transaction</item>
        <item>Create New Transaction</item>
        <item>Report</item>
        <item>Register</item>
        <item >Log out</item>
       
    </string-array>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer closed</string>
    
</resources>