<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/trans_refresh"
        android:showAsAction="always"
        android:title="@string/action_refresh"
        android:orderInCategory="1"
        android:icon="@drawable/ic_action_refresh">
    </item>

    <item android:id="@+id/trans_search"
        android:showAsAction="ifRoom"
        android:title="@string/action_search"
        android:orderInCategory="2"
        android:icon="@drawable/ic_action_search">
    </item>

    <item android:id="@+id/trans_create_new_item"
        android:showAsAction="ifRoom"
        android:title="@string/action_create_new_item"
        android:orderInCategory="3"
        android:icon="@drawable/ic_action_new">
    </item>

    <item android:id="@+id/trans_report"
          android:showAsAction="never"
          android:title="@string/action_report"
          android:orderInCategory="4">
    </item>

    <item android:id="@+id/trans_logout"
        android:showAsAction="never"
        android:title="@string/action_logout"
        android:orderInCategory="5">
    </item>

</menu>
