<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:text="@string/transaction_name"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <EditText
            android:id="@+id/transactionName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            style="android:editTextStyle"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/transaction_amount"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <EditText
            android:id="@+id/transactionAmount"
            style="android:editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_number"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ExpandableListView
            android:id="@+id/expandableListView1"
            android:layout_width="match_parent"
            android:layout_height="30dp" >
        </ExpandableListView>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/transaction_category"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <ExpandableListView
            android:id="@+id/categoryOptionsListView"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="10dp" >

        </ExpandableListView>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/merchant"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <SearchView
            android:id="@+id/merchantSearchListView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_marginBottom="10dp">

        </SearchView>

        <Button
            android:id="@+id/addTransactionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_dark"
            android:layout_marginTop="10dp"
            android:text="@string/add"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            />
        
    </LinearLayout>
    

</ScrollView>
