<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/addAccText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="5dp"
            android:text="@string/account_name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/accAliasInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:hint="Account Name"
            android:ems="10"
            android:minHeight="35dp" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="5dp"
            android:text="@string/bank_name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/accBankInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:hint="Bank Name"
            android:ems="10"
            android:minHeight="35dp" >

        </EditText>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="5dp"
            android:text="@string/account_number"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/accAccNumInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:hint="Bank Account Number"
            android:ems="10"
            android:minHeight="35dp" >

        </EditText>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="5dp"
            android:text="@string/current_balance"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/accBalanceInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:hint="Current Balance"
            android:ems="10"
            android:minHeight="35dp" />

        <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="5dp"
                android:text="@string/tax_rate"
                android:textSize="16sp"
                android:textStyle="bold" />

        <EditText
                android:id="@+id/taxRateInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:hint="Tax Rate"
                android:ems="10"
                android:minHeight="35dp"
                android:text="0.06" />

        <Button
            android:id="@+id/accountAddButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="5dp"
            android:layout_weight="0.1"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/add"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>
